fixing bugs on mobile device screen size

--- a/style.css
+++ b/style.css
@@ -229,10 +229,11 @@ section{
      #main-header {
          font-size: 80%;
          text-align: left;
+         background-color: black;
      }
     
      #main-image{
-        background-image: url(images/winners.jpg);
+        background-image: url(images/girls-with-trophies.jpg);
         height: 800px;
      }
 
@@ -243,6 +244,11 @@ section{
      #name #email #number {
          display: inline-block;
      }
+     #newsfeed #video{
+        width: 100%;
+     }
+
+
  }
 
 
@@ -256,7 +262,7 @@ section{
      }
 
      #main-image{
-        background-image: url(images/winners.jpg);
+        background-image: url(images/girls-with-trophies.jpg);
         height: 800px;
      }
 
@@ -274,10 +280,18 @@ section{
          margin-top: 0;
      }
 
+     #newsfeed #video{
+        width: 100%;
+     }
+
      .join-label {
          margin: 0;
          text-align: left;
          font-size: 75%;
+     }
+
+     #join-us{
+        height: 600px;
      }
 
      i {
